--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -20,8 +20,8 @@
     --secondary: 100, 59%, 31%;
     --secondary-foreground: 280, 23%, 95%;
 
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
+    --muted: 100, 59%, 60%;
+    --muted-foreground: 280, 23%, 95%;
 
     --accent: 100, 59%, 31%;
     --accent-foreground: 280, 23%, 95%;
